<resources>
    <string name="app_name">EarthQuakes</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="earthquake_url">http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_week.geojson</string>
    <string name="title_activity_earthquake_detail">earthquake_detail</string>
    <string name="earthquake">EARTHQUAKE DETAIL</string>
    <string name="num_earthquakes">%d earthquake processed</string>
    <string name="SettingsActivity">Settings</string>
    <string name="earthquakes_refresh">Earthquake options</string>
    <string name="earthquakes_filter">Filters</string>
    <string name="auto_update_title">Autorefresh</string>
    <string name="pref_list_magnitud">Select minimun magnitude</string>
    <string name="pref_list_magnitud_min">Minimum value for margnitude</string>
    <string name="PREF_AUTO_UPDATE">PREF_AUTO_UPDATE</string>
    <string name="PREF_UPDATE_INTERVAL">PREF_UPDATE_INTERVAL</string>
    <string name="PREF_MAGNITUDE_MIN">PREF_MAGNITUDE_MIN</string>
    <string name="auto_update_desc">Select to auto update</string>
    <string name="update_interval_desc">Select update frequency</string>
    <string name="update_interval_title">Frequency</string>
    <string name="pref_magnitude_title">Magnitude</string>
    <string name="pref_magnitude_desc">Select minimum magnitude</string>
    <string name="update_interval_dialog">Choose frequency</string>
    <string name="pref_magnitude_dialog">Choose magnitude</string>
    <string name="list">List</string>
    <string name="map">Map</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_map_layout">map_layout</string>
</resources>
