<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
    android:title="@string/earthquakes_refresh">
        <!-- Autorefresh si/no -->
        <SwitchPreference
            android:key="@string/PREF_AUTO_UPDATE"
            android:title="@string/auto_update_title"
            android:summary="@string/auto_update_desc"
            android:defaultValue="true">
        </SwitchPreference>
        <!-- Frecuencia de refresco -->
        <ListPreference
            android:key="@string/PREF_UPDATE_INTERVAL"
            android:title="@string/update_interval_title"
            android:summary="@string/update_interval_desc"
            android:dialogTitle="@string/update_interval_dialog"
            android:entries="@array/list_magnitud_options"
            android:entryValues="@array/list_magnitud_values">
        </ListPreference>
</PreferenceCategory>
    <PreferenceCategory
        android:title="@string/earthquakes_filter">
        <!-- Magnitud minima -->
        <ListPreference
            android:key="@string/PREF_MAGNITUDE_MIN"
            android:title="@string/pref_magnitude_title"
            android:summary="@string/pref_magnitude_desc"
            android:dialogTitle="@string/pref_magnitude_dialog"
            android:entries="@array/magnitude_options"
            android:entryValues="@array/magnitude_values">
        </ListPreference>

    </PreferenceCategory>
</PreferenceScreen>